# nvc

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  install.sh  nvc.manifest.rc
.github/workflows/: release.yml  rust.yml
docs/: maintainer-policy.md  release-checklist.md  support-policy.md  testing.md
scripts/: generate-checksums.sh  test-fast.sh  test-real-download-smoke.sh
src/: alias.rs  arch.rs  cache_ops.rs  choose_version_for_user_input.rs  cli.rs  config.rs  current_version.rs  default_version.rs  directories.rs  doctor.rs  downloader.rs  http.rs  installed_versions.rs  log_level.rs  lts.rs  main.rs  progress.rs  remote_node_index.rs  system_version.rs  user_version.rs  user_version_reader.rs  version.rs  version_file_strategy.rs  version_files.rs
src/archive/: mod.rs  zip.rs
src/commands/: alias.rs  cache.rs  command.rs  completions.rs  current.rs  default.rs  doctor.rs  env.rs  exec.rs  install.rs  ls_local.rs  ls_remote.rs  mod.rs  pin.rs  prune.rs  self_command.rs  unalias.rs  uninstall.rs  use.rs
src/shell/: bash.rs  fish.rs  powershell.rs  shell.rs  zsh.rs
src/shell/infer/: windows.rs
src/shell/windows_cmd/: cd.cmd  mod.rs
tests/: cache_prune_contract.rs  doctor_contract.rs  env_shell_contract.rs  pin_contract.rs  self_update_contract.rs  shared_global_prefix.rs
