[package]
name = "nvc"
version = "0.1.0"
edition = "2021"
authors = ["kriszu <wangsizhu0504@outlook.com>"]
license = "MIT"
description = "A node version controll tool"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.166", features = ["derive"] }
clap = { version = "4.3.10", features = ["derive", "env"] }
serde_json = "1.0.115"
chrono = { version = "0.4.37", features = ["serde", "now"], default-features = false }
tar = "0.4.38"
xz2 = "0.1.7"
node-semver = "2.1.0"
dirs = "5.0.1"
colored = "2.0.4"
zip = "0.6.6"
tempfile = "3.6.0"
indoc = "2.0.2"
log = "0.4.19"
env_logger = "0.10.0"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.11.18", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli"], default-features = false }
url = "2.5.0"
sysinfo = "0.29.11"
thiserror = "1.0.58"
clap_complete = "4.3.1"
anyhow = "1.0.81"
indicatif = "0.17.8"

[dev-dependencies]
pretty_assertions = "1.4.0"
duct = "0.13.6"
test-log = "0.2.12"

[build-dependencies]
embed-resource = "1.8.0"

[target.'cfg(windows)'.dependencies]
csv = "1.2.2"
junction = "1.0.0"

[features]
